<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary2"
    tools:context="code.taxigp.com.usuariotaxigp1.BuzonSugerencias">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fbExit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:clickable="true"
        app:fabSize="mini"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_home_black_24dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="end"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/buzon_close" />


            <EditText
                android:id="@+id/txtNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_nombres"
                android:maxLength="20"
                android:textColor="@color/colorTexto" />

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/str_mail"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:textColor="@color/colorTexto" />

            <EditText
                android:id="@+id/txtAsunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/str_asunto"
                android:maxLength="30"
                android:textColor="@color/colorTexto" />

            <EditText
                android:id="@+id/txtContenido"

                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/borde_login"
                android:gravity="top"
                android:hint="@string/str_contenido"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:paddingTop="8dp"
                android:textColor="@color/colorPrimary2"
                android:textColorHint="@color/colorPrimary"
                android:textDirection="firstStrong" />

            <ru.katso.livebutton.LiveButton xmlns:livebutton="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btnEnviarCorreo"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/str_enviar"
                android:textColor="@color/colorTexto"
                android:textSize="14sp"
                android:textStyle="bold"
                livebutton:backgroundColor="@color/colorPrimary"
                livebutton:corners="2dp"
                livebutton:normalHeight="4dp"
                livebutton:pressedHeight="0dp"
                livebutton:shadowColor="@color/primaryTextColor" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>