<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary2"
    android:weightSum="100"
    android:orientation="vertical"
    tools:context="code.taxigp.com.usuariotaxigp1.LoginUser">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="169dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/img_login_margin_down"
                android:layout_marginEnd="@dimen/img_login_margin_right"
                android:layout_marginStart="@dimen/img_login_margin_left"
                android:layout_marginTop="@dimen/img_login_margin_top"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/img_usu_login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/login_layout_margin_right"
                android:layout_marginStart="@dimen/login_layout_margin_left"
                android:layout_marginTop="40dp"
                android:layout_weight="40"
                android:background="@drawable/borde_login"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputLayout
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/txCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/str_mail"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_contrasena"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLoginFire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/str_ingresar"
                    android:textColor="@color/primaryTextColor"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_olvido_contrasena"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp" />

            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/login_layout_margin_right"
                android:layout_marginStart="@dimen/login_layout_margin_left"
                android:layout_marginTop="@dimen/login_layout_padding_top"
                android:layout_weight="15" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/login_layout_margin_right"
                android:layout_marginStart="@dimen/login_layout_margin_left"
                android:layout_marginTop="10dp"
                android:layout_weight="15">

            </com.google.android.gms.common.SignInButton>


            <Button
                android:id="@+id/btnAbrirDialogRegis"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/login_layout_margin_right"
                android:layout_marginStart="@dimen/login_layout_margin_left"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/str_registro"
                android:textColor="@color/colorPrimary" />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="162dp"
                android:layout_marginTop="162dp"
                android:layout_weight="1"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/LoginButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txCorreo"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />
        </LinearLayout>
    </ScrollView>


</android.widget.LinearLayout>

